--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,7 @@
-[build-system]
-requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
-
-[tool.poetry]
+[project]
 name = "s1-processor"
 version = "0.1.0"
 description = "A Sentinel-1 processor based on SNAP and pyroSAR for SLC data producing backscatter intensity and/or InSAR coherence and/or Dual pol H/a decomposition"
-authors = ["Steven Hill <steven.hill@uni-wuerzburg.de>"]
-license = "MIT"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-requires-python = ">=3.8,<3.11"
-
-
+requires-python = ">=3.13"
+dependencies = ["pyroSAR"]
