--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 description = "A Sentinel-1 processor based on SNAP and pyroSAR for SLC data producing backscatter intensity and/or InSAR coherence and/or Dual pol H/a decomposition"
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = ["pyroSAR"]
+dependencies = ["psycopg2-binary","pyroSAR"]
